# rust-rule-miner

./: CHANGELOG.md  Cargo.toml  ENGINE_INTEGRATION_SUMMARY.md  INTEGRATION_GUIDE.md  LICENSE  Makefile  README.md  mined_rules.grl  test_debug.rs  test_rule.grl
.github/workflows/: rust.yml
benches/: apriori_benchmark.rs  fp_growth_benchmark.rs  performance_benchmark.rs  sequential_pattern_benchmark.rs
docs/: ADVANCED.md  EXCELSTREAM.md  GETTING_STARTED.md  GRAPH_BASED_RULE_MINING.md  INTEGRATION.md  PERFORMANCE.md
examples/: 01_simple_ecommerce.rs  02_medium_complexity.rs  03_advanced_large_dataset.rs  04_load_from_excel_csv.rs  POSTGRES_STREAMING.md  basic_mining.rs  buyer_stock_mining.rs  buyer_stock_multi_item.rs  cloud_demo.rs  diverse_rule_templates.rs  excelstream_demo.rs  flexible_domain_mining.rs  integration_with_engine.rs  integration_with_rete.rs  performance_test.rs  postgres_setup.sql  postgres_stream_mining.rs  simple_sku_reorder.rs  sku_reorder_prediction.rs
src/: config.rs  data_loader.rs  errors.rs  lib.rs  transaction.rs  types.rs
src/engine/: mod.rs
src/export/: grl.rs  mod.rs
src/graph/: mod.rs
src/mining/: apriori.rs  fpgrowth.rs  mod.rs  stats.rs
