[package]
name = "rust-rule-miner"
version = "0.1.0"
edition = "2021"
authors = ["Ton That Vu <ttvuhm@gmail.com>"]
description = "Automatic rule discovery from historical data using association rule mining, sequential pattern mining, and graph-based pattern matching. Generates executable rules for rust-rule-engine."
license = "MIT"
readme = "README.md"
repository = "https://github.com/KSD-CO/rust-rule-miner"
documentation = "https://docs.rs/rust-rule-miner"
keywords = ["data-mining", "pattern-mining", "association-rules", "apriori", "rule-discovery"]
categories = ["algorithms", "data-structures", "science"]

[features]
default = []
cloud = ["tokio", "reqwest"]  # Enable cloud storage support (S3, HTTP)

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph algorithms
petgraph = "0.6"

# Date/time for sequential patterns
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"

# Hashing and collections
ahash = "0.8"

# Logging
log = "0.4"

# Excel/CSV streaming support
excelstream = { version = "0.14", features = ["cloud-s3", "cloud-http"] }  # High-performance streaming with cloud support

# Async runtime (for cloud features)
tokio = { version = "1", features = ["rt", "macros"], optional = true }
reqwest = { version = "0.12", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
# Integration with rust-rule-engine v1.15.0+ (requires += operator support for array append in GRL)
rust-rule-engine = "1.15.0"

# Benchmarks
[[bench]]
name = "apriori_benchmark"
harness = false

[[bench]]
name = "fp_growth_benchmark"
harness = false

[[bench]]
name = "sequential_pattern_benchmark"
harness = false

[[bench]]
name = "performance_benchmark"
harness = false
