[package]
name = "rust-rule-miner"
version = "0.2.0"
edition = "2021"
authors = ["Ton That Vu <ttvuhm@gmail.com>"]
description = "Automatic rule discovery from historical data using association rule mining, sequential pattern mining, and graph-based pattern matching. Generates and executes rules with rust-rule-engine integration."
license = "MIT"
readme = "README.md"
repository = "https://github.com/KSD-CO/rust-rule-miner"
documentation = "https://docs.rs/rust-rule-miner"
keywords = ["data-mining", "pattern-mining", "association-rules", "apriori", "rule-discovery"]
categories = ["algorithms", "data-structures", "science"]

[features]
default = []
cloud = ["tokio", "reqwest"]  # Enable cloud storage support (S3, HTTP)
engine = ["rust-rule-engine"]  # Enable rule engine integration
postgres = ["tokio-postgres", "bb8", "bb8-postgres", "tokio"]  # Enable PostgreSQL streaming support

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph algorithms
petgraph = "0.6"

# Date/time for sequential patterns
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"

# Hashing and collections
ahash = "0.8"

# Logging
log = "0.4"

# Excel/CSV streaming support
excelstream = { version = "0.14", features = ["cloud-s3", "cloud-http"] }  # High-performance streaming with cloud support

# Async runtime (for cloud features)
tokio = { version = "1", features = ["rt", "macros"], optional = true }
reqwest = { version = "0.12", optional = true }

# Rule engine integration (core feature)
rust-rule-engine = { version = "1.15.0", optional = true }

# PostgreSQL support for streaming data
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"], optional = true }
bb8 = { version = "0.8", optional = true }
bb8-postgres = { version = "0.8", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# Benchmarks
[[bench]]
name = "apriori_benchmark"
harness = false

[[bench]]
name = "fp_growth_benchmark"
harness = false

[[bench]]
name = "sequential_pattern_benchmark"
harness = false

[[bench]]
name = "performance_benchmark"
harness = false
